[tool.poetry]
name = "bqsc"
version = "1.0.0"
description = "Define schema object from bigquery schema definition json file"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
